--- a/a.css
+++ b/a.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: abster;
+    src: url(font/abster-webfont.woff) format('woff');
+}
+
+/* 전역변수 */
+
 *
 {
     margin: 0;
@@ -25,11 +32,21 @@ body
     display: none;
 }
 
+main
+{
+    width: 100%;
+    height: 90vh;
+    color: white;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+}
+
 #assem_
 {
     min-width: 100%;
     width: 100%;
-    height: 100vh;
 }
 
 /* 매뉴바 */
@@ -66,4 +83,9 @@ body
     flex-wrap: nowrap;
     align-items: center;
     justify-content: space-around;
+}
+
+.activity
+{
+    background-color: rgb(yellow);
 }
