--- a/reference.css
+++ b/reference.css
@@ -84,8 +84,7 @@ body {
 }
 /* middle */
 #middle{
-    /* background-color: rgb(24, 27, 31); */
-    background-color: rgb(53 58 64);
+    background-color: rgb(53, 58, 64);
     color: white;
     width:100%;
     padding: 174px 0px 200px;
