--- a/Q&A.css
+++ b/Q&A.css
@@ -24,7 +24,9 @@ a
 
 h5
 {
-    margin-top: 0.5rem;
+    margin-top: 0.25rem;
+    margin-left: 4rem;
+    font-weight: bold;
 }
 
 body
@@ -40,7 +42,7 @@ body
 main
 {
     width: 100%;
-    height: 90vh;
+    height: 95vh;
     color: white;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -107,7 +109,7 @@ main
 
 .link_
 {
-    margin-top: 100px;
+    margin-top: 91px;
     padding-bottom: 17.85%;
 }
 
@@ -122,12 +124,18 @@ main
     border-radius: 20px !important;
 }
 
-/* .accordion-body
+.accordion-body, .accordion-button
 {
-    border-radius: 20px !important;
-} */
+    font-weight: bold;
+    font-size: 17px;
+}
 
 .card-title
 {
    margin-bottom: 0 !important;
+}
+
+.accordion
+{
+    --bs-accordion-btn-padding-y: 1.15rem !important;
 }
