--- a/activity_write.css
+++ b/activity_write.css
@@ -90,3 +90,10 @@ main
 {
     background-color: rgb(yellow);
 }
+
+.bundle
+{
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+}
